# diffvg

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
